--- a/examples/index.html
+++ b/examples/index.html
@@ -22,6 +22,7 @@
     <li><a href="simple/index.html">Simple Example</a></li>
     <li><a href="asteroid/index.html">Asteroid</a></li>
     <li><a href="earth_moon/index.html">Earth + Orbiting Satellite</a></li>
+    <li><a href="ephemeris_table/index.html">Asteroid With Lookup Ephemeris</a></li>
     <li><a href="roadster/index.html">Tesla Roadster</a></li>
     <li><a href="meteor-shower/index.html">Meteor Shower</a></li>
     <li><a href="shapemodel_simple/index.html">Simple shapemodel</a></li>
