Asteroid Close Approach better time controls

--- a/examples/asteroid_close_approach/index.html
+++ b/examples/asteroid_close_approach/index.html
@@ -20,10 +20,11 @@
 <div class="sim-info">
   Current Date:<span id="current-date">?</span>
   <br>
-  <button id="btn-slower">Slower</button>
-  <button id="btn-faster">Faster</button>
-  <button id="btn-start">Start</button>
-  <button id="btn-stop">Stop</button>
+  <button id="btn-slower">&#9196;</button>
+  <button id="btn-faster">&#9195;</button>
+  <button id="btn-backward">&#9664;</button>
+  <button id="btn-stop">&#9209;</button>
+  <button id="btn-forward">&#9654;</button>
   <button id="btn-set-time">Set Time</button>
   <button id="btn-set-jd-per-second">Set Jd/s</button>
 </div>
