--- a/examples/asteroid_close_approach/index.html
+++ b/examples/asteroid_close_approach/index.html
@@ -27,6 +27,7 @@
   <button id="btn-forward">&#9654;</button>
   <button id="btn-set-time">Set Time</button>
   <button id="btn-set-jd-per-second">Set Jd/s</button>
+  <button id="btn-load-asteroid">Load Asteroid</button>
 </div>
 <div id="main-container">
 </div>
