Add EllipsoidObject with example of ellipsoidal asteroid and covariance type ellipsoid

--- a/examples/index.html
+++ b/examples/index.html
@@ -25,6 +25,8 @@
     <li><a href="roadster/index.html">Tesla Roadster</a></li>
     <li><a href="meteor-shower/index.html">Meteor Shower</a></li>
     <li><a href="shapemodel_simple/index.html">Simple shapemodel</a></li>
+    <li><a href="ellipsoid_simple/index.html">Simple Ellipsoid</a></li>
+    <li><a href="ellipsoid_asteroid/index.html">Ellipsoidal Asteroid</a></li>
     <li><a href="planet/index.html">Planet</a></li>
     <li><a href="asteroid_shape_from_earth/index.html">Asteroid as seen from Earth</a></li>
     <li><a href="scroll/index.html">Simulation with scroll listener</a></li>
